# jairika

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json
.trunk/: trunk.yaml
bindings/go/: Cargo.toml  README.md
bindings/java/: Cargo.toml  README.md
bindings/javascript/: Cargo.toml  README.md
bindings/php/: Cargo.toml  README.md
bindings/python/: Cargo.toml  README.md  pyproject.toml
jairika/: Cargo.toml  README.md
jairika/src/: error.rs  lib.rs
jairika/src/api/: architecture.rs  engine.rs  mod.rs
jairika/src/storage/: mod.rs
